Bug 380343 - Selections made with polygon, outline and bezier selection tools don't extend beyond canvas boundaries
Summary: Selections made with polygon, outline and bezier selection tools don't extend...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-30 05:08 UTC by Raghavendra kamath
Modified: 2017-09-01 08:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2017-05-30 05:08:19 UTC
Selections made with the polygon, outline and bezier selection tool which used to get extended beyond canvas boundaries too in 2.9 and also in 3.0, don't get beyond the canvas boundaries, they get clipped to canvas edges.

Some times user has to selects parts of image beyond the visible canvas area to resize and modify, this big hinders that process.

This regression started happening from 3.1.1

I am trying to find the exact commit that introduced this, but it is taking time. Ill comment here when i find the commit.
Comment 1 Nicholas LaPointe 2017-07-16 11:52:34 UTC
I won't mark this as confirmed at the moment because I'm not sure if this was intended or not.
I can reproduce it. The rectangular and contiguous selection tools still clip to the edges in 3.0.1 Beta (the oldest version I have installed), but the rest were able to go out of the canvas.

It is still possible to have a selection larger than the canvas at the moment by doing "Select All" -> "Grow Selection" (feather or border can do it too).
Comment 2 Raghavendra kamath 2017-07-16 13:36:22 UTC
Thanks for testing nicholas,

I doubt this is intended because, it is not documented nor there is a commit making this change (as far as I know). It is a side effect of some other change. which is no desirable in my opinion.
Comment 3 Nicholas LaPointe 2017-09-01 08:37:10 UTC
Git commit a032e569bf674a4886804e6e0fee7df4b4791ec9 by Nicholas LaPointe.
Committed on 01/09/2017 at 08:35.
Pushed by nicholasl into branch 'krita/3.2'.

Allow selections outside of canvas boundary using when using selection tools

This mostly reverts the changes made by 6b1b59121368222130daa15e11c3f3d557d8279a and 46b602ce35c920a337a31401f48d75e3c133bd71
and also removes a call in __KisToolSelectRectangularLocal::finishRect() that cropped the selection to the canvas boundary.
(removing that call should also fix the bug that the two reverted commits were intended to fix -- see https://phabricator.kde.org/T4094 )

M  +2    -38   libs/ui/tool/kis_selection_tool_helper.cpp
M  +0    -2    libs/ui/tool/kis_selection_tool_helper.h
M  +0    -1    plugins/tools/selectiontools/kis_tool_select_rectangular.cc

https://commits.kde.org/krita/a032e569bf674a4886804e6e0fee7df4b4791ec9
Comment 4 Nicholas LaPointe 2017-09-01 08:39:53 UTC
Git commit 43b9a526a7e9d0cecd84b5437d03a2b715bcde52 by Nicholas LaPointe.
Committed on 01/09/2017 at 08:39.
Pushed by nicholasl into branch 'master'.

Allow selections outside of canvas boundary using when using selection tools

This mostly reverts the changes made by 6b1b59121368222130daa15e11c3f3d557d8279a and 46b602ce35c920a337a31401f48d75e3c133bd71
and also removes a call in __KisToolSelectRectangularLocal::finishRect() that cropped the selection to the canvas boundary.
(removing that call should also fix the bug that the two reverted commits were intended to fix -- see https://phabricator.kde.org/T4094 )

M  +2    -38   libs/ui/tool/kis_selection_tool_helper.cpp
M  +0    -2    libs/ui/tool/kis_selection_tool_helper.h
M  +0    -1    plugins/tools/selectiontools/kis_tool_select_rectangular.cc

https://commits.kde.org/krita/43b9a526a7e9d0cecd84b5437d03a2b715bcde52