Allow selections outside of canvas boundary using when using selection tools

This mostly reverts the changes made by 6b1b59121368222130daa15e11c3f3d557d8279a and 46b602ce35c920a337a31401f48d75e3c133bd71
and also removes a call in __KisToolSelectRectangularLocal::finishRect() that cropped the selection to the canvas boundary.
(removing that call should also fix the bug that the two reverted commits were intended to fix -- see https://phabricator.kde.org/T4094 )

BUG: 380343